--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Help') %>
+<%= content_for :title do %>Ruby on Rails Tutorial Sample App | Help<%end%>
 <!DOCTYPE html>
 <html>
 
