--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, 'Home') %>
+<%= content_for :title do %>Ruby on Rails Tutorial Sample App | Home<%end%>
 <!DOCTYPE html>
 <html>
 	<div class = "center hero-unit">
-		<h1>Welcome to the Sample App</h1>
+		<h1>Sample App</h1>
 
 		<h2>
 		This is the home page for the
