--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>Ruby on Rails Tutorial Sample App | About Us<%end%>
+<% provide(:title, 'About Us') %>
 <!DOCTYPE html>
 <html>
 
