--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>Ruby on Rails Tutorial Sample App | Contact<%end%>
+<% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
 	Contact Ruby on Rails Tutorial about the sample app at the
